--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- 2019.9.12 Html作业 -->
 <html>
 	<head>
 		<title>软件技术1802 28 夏林</title>
@@ -46,6 +47,6 @@
 			中国风视效，更为角色命运与自身生命经验产生的共鸣而感动 。<br/>
 		</p>
 		<hr size="2" color="red" />
-		<p align="right"><strong>参考百度文库：<a href="http://192.168.56.3">点击查看</a></strong><font size="1" color="red"><em>(因无法联网，暂时跳转至徐翰林大帅锅的界面)</em></font></p>
+		<p align="right"><strong>参考百度文库：<a href="https://baike.baidu.com/item/哪吒之魔童降世/22187580?fr=aladdin">点击查看</a></p>
 	</body>
 </html>
