update index.html and index2.html

--- a/index.html
+++ b/index.html
@@ -1,52 +1,10 @@
-<!DOCTYPE html>
-<!-- 2019.9.12 Html作业 -->
+<!doctype html>
 <html>
-	<head>
-		<title>软件技术1802 28 夏林</title>
-		<meta name="author" content="夏林" />
-		<meta name="description" content="《哪吒之魔童降世》简介" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	</head>
-	<body bgcolor="#e5986a" >
-		<h1 align="center">《哪吒之魔童降世》简介</h1>
-		<h4 align="center">软件技术1802&nbsp;&nbsp;&nbsp;&nbsp;夏林</h4>
-		<hr size="2" color="red" />
-		<img src="img/p1.jpg" align="left" width="330" height="450" hspace="15" vspace="15"/>
-		<h2><ins>基本信息:</ins></h2> 
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>《哪吒之魔童降世》</strong>是由霍尔果斯彩条屋影业
-			有限公司出品的动画电影，由饺子执导兼编剧，吕艳婷、囧森瑟夫、瀚墨、陈浩、绿绮、张珈铭、杨卫
-			担任主要配音。该片改编自中国神话故事，讲述了哪吒虽“生而为魔”却“逆天而行斗到底”的成长经
-			历的故事。该片于2019年7月26日在中国内地上映。2019年9月6日晚，第十二届中国国际漫画节开幕
-			式暨第16届中国动漫金龙奖颁奖大会于广州举行。票房位列中国影史第二位、年度票房冠军的动画
-			电影<strong>《哪吒之魔童降世》</strong>成为本届金龙奖最大赢家，创纪录地获得最佳动画长片奖金奖、
-			最佳动画导演奖、最佳动画编剧奖、最佳动画配音奖四大奖项，成为金龙奖举办16届以来单届获奖最多的
-			作品，这也是该影片上映以来在中国获得的首批殊荣。<br/>
-		</p>
-		<h2><ins>剧情简介:</ins></h2> 
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;天地灵气孕育出一颗能量巨大的混元珠，元始天尊将混元珠提炼成
-			灵珠和魔丸，灵珠投胎为人，助周伐纣时可堪大用；而魔丸则会诞出魔王，为祸人间。元始天尊启动了天
-			劫咒语，3年后天雷将会降临，摧毁魔丸。太乙受命将灵珠托生于陈塘关李靖家的儿子哪吒身上。然而
-			阴差阳错，灵珠和魔丸竟然被掉包。本应是灵珠英雄的哪吒却成了混世大魔王，这调皮捣蛋顽劣不堪的
-			哪吒却徒有一颗做英雄的心。然而面对众人对哪吒的误解和即将来临的天雷的降临，哪吒是否命中注定
-			会立地成魔，他将何去何从。<br/>
-		</p>
-		<h2><ins>影片评价:</ins></h2>
-		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;●该片在前作的基础上大胆创新，既保留了中国传统文化的精髓，又加入了流行元素，
-			让所要展现的文化更易于被受众接受。它打破成见，强调自我的独立性，更兼顾有隐喻的现实。片中有不少
-			世俗丑恶的一面，比起真相，很多人更愿意去相信道听途说，然后带着有色眼镜去看人。反叛型超级英雄，
-			虽看起来反叛传统却依然保留着最中正的热血和感动，依然有着奉献和担当的着中华文化的价值取向。
-			（东南网评）<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;●该片的逆袭，并不是打鸡血或者煲鸡汤。电影对哪吒的心路历程有着非常细腻且具有
-			说服力的刻画。并且，编剧巧妙地将敖丙作为哪吒的对照，凸显了是人是魔都是自主选择，而不是天注定的
-			主题。（荔枝娱评）<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;●该片对经典的“哪吒闹海”进行了颠覆式改编，但影片以完成度极高、可观性极强的方
-			式，讲好了一个熟悉又新鲜、热血又感人的“中国故事”。各个年龄层的观众爱看且买账，不单为那惊艳绝伦的
-			中国风视效，更为角色命运与自身生命经验产生的共鸣而感动 。<br/>
-		</p>
-		<hr size="2" color="red" />
-		<p align="right"><strong>参考百度文库：<a href="https://baike.baidu.com/item/哪吒之魔童降世/22187580?fr=aladdin">点击查看</a></p>
-	</body>
+    <head>
+        <title>index</title>
+        <meta charset="utf-8" name="author" content="夏林"/>
+    </head>
+    <body>
+        <a href="index2.html" >第一次html作业</a>
+    </body>
 </html>
