--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" name="author" content="夏林"/>
     </head>
     <body>
-        <a href="index2.html" >第一次html作业</a>
+        <h2 align="center">练习合集</h2>
+        <p  align="center"><a href="index2.html">第一次html作业</a></p>
     </body>
 </html>
