--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h2 align="center">练习合集</h2>
-        <p  align="center"><a href="pages/index2.html">第一次html作业</a></p>
+        <p  align="center"><a href="pages/page919.html">第一次html作业</a></p>
     </body>
 </html>
