--- a/pages/page919.html
+++ b/pages/page919.html
@@ -11,7 +11,7 @@
 		<h1 align="center">《哪吒之魔童降世》简介</h1>
 		<h4 align="center">软件技术1802&nbsp;&nbsp;&nbsp;&nbsp;夏林</h4>
 		<hr size="2" color="red" />
-		<img src="../img/p1.jpg" align="left" width="330" height="450" hspace="15" vspace="15"/>
+		<img src="../imgs/p1.jpg" align="left" width="330" height="450" hspace="15" vspace="15"/>
 		<h2><ins>基本信息:</ins></h2> 
 		<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>《哪吒之魔童降世》</strong>是由霍尔果斯彩条屋影业
