--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>index</title>
+        <title>作业合集</title>
         <meta charset="utf-8" name="author" content="夏林"/>
     </head>
     <body>
