--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
         <title>作业合集</title>
         <meta charset="utf-8" name="author" content="夏林"/>
     </head>
-    <body>
+    <body bgcolor="#faebd7">
         <h2 align="center">练习合集</h2>
-        <p  align="center"><a href="pages/page919.html">第一次html作业</a></p>
-        <p  align="center"><a href="pages/page1025.html">第二次html作业</a></p>
+        <table border="2px" align="center">
+            <th>
+                <td>名称</td>
+                <td>时间</td>
+            </th>
+            <tr>
+                <td>1</td>
+                <td><a href="pages/page919.html">第一次html作业</a></td>
+                <td>--</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td><a href="pages/page1025.html">第二次html作业</a></td>
+                <td>--</td>
+            </tr>
+        </table>
     </body>
 </html>
