--- a/pages/page1025.html
+++ b/pages/page1025.html
@@ -12,7 +12,7 @@
 <body>
     <!--头部-->
     <header>
-        <h2 align="center">电影影评网</h2>
+        <h2 align="center" style="text-shadow: 5px 5px yellow">电影影评网</h2>
         <p align="center">
             <img src="../imgs/unit2/header.jpeg" width="95%" height="450"/>
         </p>
