Update page1025.html,set body's bgcolor

--- a/pages/page1025.html
+++ b/pages/page1025.html
@@ -9,7 +9,7 @@
         }
     </style>
 </head>
-<body>
+<body bgcolor="#f5f5dc">
     <!--头部-->
     <header>
         <h2 align="center" style="text-shadow: 5px 5px yellow">电影影评网</h2>
