--- a/index.html
+++ b/index.html
@@ -1,20 +1,75 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello world</title>
+		<title>个人简历demo</title>
 		<meta name="author" content="xiaxiaxiaxia" charset="utf-8"/>
-		<style>
-			.hello
-			{
-				font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-				font-size: 100px;
-				text-align: center;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="css/main.css"/>
+
 	</head>
 	<body>
-		<div class="hello">
-			Hello world
+		<div id="left">
+			<a href="#jibenxinxi">
+				<div>
+					<p>基本<br/>信息</p>
+				</div>
+			</a>
+			<a href="#jiaoyubeijing">
+				<div>
+					<p>教育<br/>背景</p>
+				</div>
+			</a>
+			<a href="#xiaoyuanjingli">
+				<div>
+					<p>校园<br/>经历</p>
+				</div>
+			</a>
+			<a href="#shixijingli">
+				<div>
+					<p>实习<br/>经历</p>
+				</div>
+			</a>
+			<a href="#jinengzhengshu">
+				<div>
+					<p>技能<br/>证书</p>
+				</div>
+			</a>
+			<a href="#ziwopingjia">
+				<div>
+					<p>自我<br/>评价</p>
+				</div>
+			</a>
 		</div>
+		<div id="right">
+			
+			<div id="jibenxinxi" class="text">
+				<h3>基本信息</h3>
+			</div>
+			<div class="bar"></div>
+			<div id="jiaoyubeijing" class="text">
+				<h3>教育背景</h3>
+			</div>
+			<div class="bar"></div>
+			<div id="xiaoyuanjingli" class="text">
+				<h3>校园经历</h3>
+			</div>
+			<div class="bar"></div>
+			<div id="shixijingli" class="text">
+				<h3>实习经历</h3>
+			</div>
+			<div class="bar"></div>
+			<div id="jinengzhengshu" class="text">
+				<h3>技能证书</h3>
+			</div>
+			<div class="bar"></div>
+			<div id="ziwopingjia" class="text">
+				<h3>自我评价</h3>
+			</div>
+			<div id="footer">
+				<div>
+					Test
+				</div>
+			</div>
+		</div>
+		
 	</body>
 </html>
