--- a/index.html
+++ b/index.html
@@ -40,30 +40,106 @@
 			</a>
 		</div>
 		<div id="right">
-			
-			<div id="jibenxinxi" class="text">
-				<h3>基本信息</h3>
+			<div class="hello" class="text">
+				<div id="hello" class="neirong">
+					简历
+					<p>It's me</p>
+				</div>
+				
+			</div>
+			<div class="bar"></div>
+			<div  class="text" align="center">
+				<div id="jibenxinxi" class="neirong" align="right">
+					<table border="1" cellspacing="35px">
+						<tr>
+							<td>姓   名：夏林</td>
+							<td>手   机：1234567891</td>
+						</tr>
+						<tr>
+							<td>年   龄：20</td>
+							<td>邮   箱：1534515084@qq.com</td>
+						</tr>
+						<tr>
+							<td>身   高：180</td>
+							<td>体   重：70kg</td>
+						</tr>
+						<tr>
+							<td>学   历：家里蹲</td>
+							<td>微   信：123321</td>
+						</tr>
+						<tr>
+							<td>求职意向：超级大boss</td>
+							<td>地   址：在那遥远的地方</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 			<div class="bar"></div>
 			<div id="jiaoyubeijing" class="text">
-				<h3>教育背景</h3>
+				<div class="neirong">
+					<table border="1">
+						<tr>
+							<td>软件技术</td>
+							<td>重庆电子工程职业学院</td>
+							<td>2018.9.1-2021.8.1</td>
+						</tr>
+						<tr>
+							<td colspan="3">主修课程：C/C++程序设计、Java程序设计、数据结构、计算方法、编译原理、软件工程、操作系统原理、数据库系统原理、网络数据库、计算机网络技术、微机原理及汇编语言程序设计、基于Web的程序设计、软件开发技术、软件测试技术、多媒体技术、网络安全技术等
+							</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 			<div class="bar"></div>
 			<div id="xiaoyuanjingli" class="text">
-				<h3>校园经历</h3>
+				<div class="neirong">
+					<p>
+						举个栗子：上海大招大学暑期实践团暑期社会实践调查员<br/>
+						●目标：深入调查退耕还草时如何保证农民的收入不减少<br/>
+						●针对农民设计简单易懂的问卷，并独立走访调查<br/>
+						●与当地政府合作，综合分析相关会议记录和政策资料<br/>
+						●完成长达20页的报告，荣获优秀社会实践报告</p>
+				</div>
 			</div>
 			<div class="bar"></div>
 			<div id="shixijingli" class="text">
-				<h3>实习经历</h3>
+				<div class="neirong">
+					<table border="1">
+						<tr>
+							<td>软件技术</td>
+							<td>重庆电子工程职业学院</td>
+							<td>2018.9.1-2021.8.1</td>
+						</tr>
+						<tr>
+							<td colspan="3">主修课程：C/C++程序设计、Java程序设计、数据结构、计算方法、编译原理、软件工程、操作系统原理、数据库系统原理、网络数据库、计算机网络技术、微机原理及汇编语言程序设计、基于Web的程序设计、软件开发技术、软件测试技术、多媒体技术、网络安全技术等
+							</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 			<div class="bar"></div>
 			<div id="jinengzhengshu" class="text">
-				<h3>技能证书</h3>
+				<div class="neirong">
+					<p>
+						软件技术专业需要考取思科认证，华为认证，NIIT认证等证书。<br/>
+						1、如果是计算机专业的话，就去考像思科认证，华为认证，NIIT认证等。其中全国计算机技术与软件专业技术资格（水平）考试是全国统考的，证书等级分层合理，可以受到国内国外广泛认可。<br/>
+						2、也可以不用考任何国家的认证证书。因为一二三四级都是给非计算机专业的人考的，本科学历相当于四级证书。 <br/>
+						3、至于其他类似微软，思科等公司的认证，其实只是针对本公司产品的一种培训。但由于公司产品具有广泛的垄断性，在就业等方面，如果具有相关公司的认证，会很有说服力的，这一点需要必须清楚。<br/>
+						网络工程专业出来的同学考的主要三种：<br/>
+						第一类是RHCE、红帽认证工程师。主要是考这个证的人基本上都是从事服务器运维方向，当然这不一定非得是linux服务器，有很多人考了这个证之后进了IBM、HP，然后去跟他们的各种大型机小型机打交道。<br/>
+						第二类证书是CISCO认证。这一类证就是我们网络专业的看家饭碗了。<br/>
+						第三类是Oracle认证。Oracle证书上分为三类：OCA证书、OCP证书、OCM证书。基本上都是从事DBA方向的人去考的，而且这个含金量是最高的，当然也是最难考的。<br/>
+						这些证书之所以有含金量，就是因为它们确实不容易拿到，并且绝大多数的人都是参加了专业机构甚至是官方机构提供的十分有价值但是也十分昂贵的培训之后，才具备了考取证书的能力。这些证书自然能成为一块非常好的敲门砖。
+					</p>
+				</div>
 			</div>
 			<div class="bar"></div>
 			<div id="ziwopingjia" class="text">
-				<h3>自我评价</h3>
+				<div class="neirong">
+					思想态度端正，学习能力强，能不断提高自身的能力与综合素质，对工作认真负责，积极主动，能吃苦耐劳，具备良好的敬业精神，能面对挫折及工作中的压力，有较强的沟通表达能力，为人随和，待人诚恳，善于团队协作，能迅速适应各种环境，并融合其中。
+				</div>
 			</div>
+			<div class="bar"></div>
 			<div id="footer">
 				<div>
 					Test
