Edit some files

--- a/index.html
+++ b/index.html
@@ -8,39 +8,39 @@
 	</head>
 	<body>
 		<div id="left">
-			<a href="#jibenxinxi">
+			<a href="#page1">
 				<div>
 					<p>基本<br/>信息</p>
 				</div>
 			</a>
-			<a href="#jiaoyubeijing">
+			<a href="#page2">
 				<div>
 					<p>教育<br/>背景</p>
 				</div>
 			</a>
-			<a href="#xiaoyuanjingli">
+			<a href="#page3">
 				<div>
 					<p>校园<br/>经历</p>
 				</div>
 			</a>
-			<a href="#shixijingli">
+			<a href="#page4">
 				<div>
 					<p>实习<br/>经历</p>
 				</div>
 			</a>
-			<a href="#jinengzhengshu">
+			<a href="#page5">
 				<div>
 					<p>技能<br/>证书</p>
 				</div>
 			</a>
-			<a href="#ziwopingjia">
+			<a href="#page6">
 				<div>
 					<p>自我<br/>评价</p>
 				</div>
 			</a>
 		</div>
 		<div id="right">
-			<div class="hello" class="text">
+			<div class="hello text">
 				<div id="hello" class="neirong">
 					简历
 					<p>It's me</p>
@@ -48,9 +48,12 @@
 				
 			</div>
 			<div class="bar"></div>
-			<div  class="text" align="center">
+			<div id="page1" class="text" align="center">
 				<div id="jibenxinxi" class="neirong" align="right">
-					<table border="1" cellspacing="35px">
+					<div id="myphoto">
+						
+					</div>
+					<table border="0" cellspacing="35px">
 						<tr>
 							<td>姓   名：夏林</td>
 							<td>手   机：1234567891</td>
@@ -75,13 +78,13 @@
 				</div>
 			</div>
 			<div class="bar"></div>
-			<div id="jiaoyubeijing" class="text">
-				<div class="neirong">
-					<table border="1">
+			<div id="page2" class="text">
+				<div id="jiaoyubeijing" class="neirong">
+					<table border="0">
 						<tr>
-							<td>软件技术</td>
-							<td>重庆电子工程职业学院</td>
-							<td>2018.9.1-2021.8.1</td>
+							<td>专业：软件技术</td>
+							<td>地点：重庆电子工程职业学院</td>
+							<td>时间：2018.9.1-2021.8.1</td>
 						</tr>
 						<tr>
 							<td colspan="3">主修课程：C/C++程序设计、Java程序设计、数据结构、计算方法、编译原理、软件工程、操作系统原理、数据库系统原理、网络数据库、计算机网络技术、微机原理及汇编语言程序设计、基于Web的程序设计、软件开发技术、软件测试技术、多媒体技术、网络安全技术等
@@ -91,8 +94,8 @@
 				</div>
 			</div>
 			<div class="bar"></div>
-			<div id="xiaoyuanjingli" class="text">
-				<div class="neirong">
+			<div id="page3" class="text">
+				<div id="xiaoyuanjingli" class="neirong">
 					<p>
 						举个栗子：上海大招大学暑期实践团暑期社会实践调查员<br/>
 						●目标：深入调查退耕还草时如何保证农民的收入不减少<br/>
@@ -102,13 +105,13 @@
 				</div>
 			</div>
 			<div class="bar"></div>
-			<div id="shixijingli" class="text">
-				<div class="neirong">
-					<table border="1">
+			<div id="page4" class="text">
+				<div id="shixijingli" class="neirong">
+					<table border="0">
 						<tr>
-							<td>软件技术</td>
-							<td>重庆电子工程职业学院</td>
-							<td>2018.9.1-2021.8.1</td>
+							<td>专业：软件技术</td>
+							<td>地点：重庆电子工程职业学院</td>
+							<td>时间：2018.9.1-2021.8.1</td>
 						</tr>
 						<tr>
 							<td colspan="3">主修课程：C/C++程序设计、Java程序设计、数据结构、计算方法、编译原理、软件工程、操作系统原理、数据库系统原理、网络数据库、计算机网络技术、微机原理及汇编语言程序设计、基于Web的程序设计、软件开发技术、软件测试技术、多媒体技术、网络安全技术等
@@ -118,8 +121,8 @@
 				</div>
 			</div>
 			<div class="bar"></div>
-			<div id="jinengzhengshu" class="text">
-				<div class="neirong">
+			<div id="page5" class="text">
+				<div id="jinengzhengshu" class="neirong">
 					<p>
 						软件技术专业需要考取思科认证，华为认证，NIIT认证等证书。<br/>
 						1、如果是计算机专业的话，就去考像思科认证，华为认证，NIIT认证等。其中全国计算机技术与软件专业技术资格（水平）考试是全国统考的，证书等级分层合理，可以受到国内国外广泛认可。<br/>
@@ -134,15 +137,15 @@
 				</div>
 			</div>
 			<div class="bar"></div>
-			<div id="ziwopingjia" class="text">
-				<div class="neirong">
-					思想态度端正，学习能力强，能不断提高自身的能力与综合素质，对工作认真负责，积极主动，能吃苦耐劳，具备良好的敬业精神，能面对挫折及工作中的压力，有较强的沟通表达能力，为人随和，待人诚恳，善于团队协作，能迅速适应各种环境，并融合其中。
+			<div id="page6"  class="text">
+				<div id="ziwopingjia" class="neirong">
+					<p>思想态度端正，学习能力强，能不断提高自身的能力与综合素质，对工作认真负责，积极主动，能吃苦耐劳，具备良好的敬业精神，能面对挫折及工作中的压力，有较强的沟通表达能力，为人随和，待人诚恳，善于团队协作，能迅速适应各种环境，并融合其中。</p>
 				</div>
 			</div>
 			<div class="bar"></div>
 			<div id="footer">
-				<div>
-					Test
+				<div class="neirong" id="thanks">
+					Thanks
 				</div>
 			</div>
 		</div>
