Edit background images and change font color

--- a/index.html
+++ b/index.html
@@ -4,43 +4,57 @@
 		<title>个人简历demo</title>
 		<meta name="author" content="xiaxiaxiaxia" charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-
 	</head>
 	<body>
 		<div id="left">
-			<a href="#page1">
-				<div>
-					<p>基本<br/>信息</p>
-				</div>
-			</a>
-			<a href="#page2">
-				<div>
-					<p>教育<br/>背景</p>
-				</div>
-			</a>
-			<a href="#page3">
-				<div>
-					<p>校园<br/>经历</p>
-				</div>
-			</a>
-			<a href="#page4">
-				<div>
-					<p>实习<br/>经历</p>
-				</div>
-			</a>
-			<a href="#page5">
-				<div>
-					<p>技能<br/>证书</p>
-				</div>
-			</a>
-			<a href="#page6">
-				<div>
-					<p>自我<br/>评价</p>
-				</div>
-			</a>
+			<table id="leftselect" border="" cellspacing="" cellpadding="">
+				<tr>
+					<th>
+						<a href="#page1">
+							<p class="select">基本信息</p>
+						</a>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<a href="#page2">
+							<p class="select">教育背景</p>
+						</a>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<a href="#page3">
+							<p class="select">校园经历</p>
+						</a>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<a href="#page4">
+							<p class="select">实习经历</p>
+						</a>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<a href="#page5">
+							<p class="select">技能证书</p>
+						</a>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<a href="#page6">
+							<p class="select">自我评价</p>
+						</a>
+					</th>
+				</tr>
+			</table>
+
 		</div>
 		<div id="right">
-			<div class="hello text">
+			<div id="jianli" class="hello text">
 				<div id="hello" class="neirong">
 					简历
 					<p>It's me</p>
