Edit page layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="left">
-			<table id="leftselect" border="" cellspacing="" cellpadding="">
+			<table id="leftselect" border="0" cellspacing="" cellpadding="">
 				<tr>
 					<th>
 						<a href="#page1">
